zajęcia czwarte, już coś działa, ale źle

--- a/conf/main.ini
+++ b/conf/main.ini
@@ -1,4 +1,7 @@
 [main]
-dimension = 51
-number_of_atoms = 10
+dimension = 3
+number_of_atoms = 1
+steps = 100000
 force_field = SoftWall
+spf = 1
+step_time = 0.0001
