--- a/conf/main.ini
+++ b/conf/main.ini
@@ -1,7 +1,12 @@
 [main]
 dimension = 3
-number_of_atoms = 1
+;number_of_atoms = 1
 steps = 100000
-force_field = SoftWall
 spf = 1
-step_time = 0.0001
+step_time = 0.01
+input_file = input/input.pdb
+algorithm = Verlet
+[force_fields]
+force_field_1 = LenardJones
+force_field_2 = SoftWall
+force_field_3 = MinimumBarrierMinimum
