kosmetyczne poprawki w konfiguracji, usunięte zbędne białko w przykładowym inpucie

--- a/conf/2.ini
+++ b/conf/2.ini
@@ -1,11 +1,11 @@
 [main]
 dimension = 2
 number_of_atoms = 2
-steps = 100000
+steps = 10000
 spf = 10
 step_time = 0.001
 algorithm = VelocityVerlet
-output_file = 2
+output_dir = 2
 [force_fields]
 force_field_1 = LenardJones
 force_field_1_R = 1
