--- a/conf/3.ini
+++ b/conf/3.ini
@@ -5,7 +5,7 @@ steps = 20000
 spf = 10
 step_time = 0.001
 algorithm = LeapFrog
-output_file = 3
+output_dir = 3
 [force_fields]
 force_field_1 = LenardJones
 
