--- a/conf/4.ini
+++ b/conf/4.ini
@@ -5,7 +5,7 @@ steps = 50000
 spf = 10
 step_time = 0.001
 algorithm = Verlet
-output_file = 4
+output_dir = 4
 [force_fields]
 force_field_1 = MinimumBarrierMinimum
 force_field_1_a = 5
