--- a/conf/1.ini
+++ b/conf/1.ini
@@ -5,7 +5,7 @@ steps = 10000
 spf = 10
 step_time = 0.001
 algorithm = Verlet
-output_file = 1
+output_dir = 1
 [force_fields]
 force_field_1 = SoftWall
 force_field_1_f = 1
