--- a/conf/testing.ini
+++ b/conf/testing.ini
@@ -5,7 +5,7 @@ steps = 100000
 spf = 10
 step_time = 0.001
 ;input_file = input/input.pdb
-output_file = 0
+output_dir = 0
 algorithm = Verlet
 [force_fields]
 force_field_1 = LenardJones
