dodałem opcję co ile kroków zrzucać energię do plików wydzieliłem do tego osobną sekcję w kofigu [output], do której przeniosłem też co ile kroków zapisywać model i gdzie zapisywać

--- a/conf/1.ini
+++ b/conf/1.ini
@@ -2,11 +2,15 @@
 dimension = 3
 number_of_atoms = 10
 steps = 10000
-spf = 10
 step_time = 0.001
 algorithm = Verlet
-output_dir = 1
+
 [force_fields]
 force_field_1 = SoftWall
 force_field_1_f = 1
 force_field_1_size = 3
+
+[output]
+output_dir = 1
+spf = 10
+spe = 1
