--- a/conf/4.ini
+++ b/conf/4.ini
@@ -2,13 +2,17 @@
 dimension = 1
 number_of_atoms = 1
 steps = 50000
-spf = 10
 step_time = 0.001
 algorithm = Verlet
-output_dir = 4
+
 [force_fields]
 force_field_1 = MinimumBarrierMinimum
 force_field_1_a = 5
 force_field_1_b = 10
 force_field_1_c = 3
 force_field_1_d = 0.02
+
+[output]
+output_dir = 4
+spf = 10
+spe = 1
