--- a/conf/testing.ini
+++ b/conf/testing.ini
@@ -2,13 +2,17 @@
 dimension = 2
 number_of_atoms = 2
 steps = 100000
-spf = 10
 step_time = 0.001
 ;input_file = input/input.pdb
-output_dir = 0
 algorithm = Verlet
+
 [force_fields]
 force_field_1 = LenardJones
 force_field_2 = SoftWall
 force_field_2_size = 2
 force_field_3 =
+
+[output]
+output_dir = 0
+spf = 10
+spe = 1
