--- a/conf/2.ini
+++ b/conf/2.ini
@@ -2,10 +2,9 @@
 dimension = 2
 number_of_atoms = 2
 steps = 10000
-spf = 10
 step_time = 0.001
 algorithm = VelocityVerlet
-output_dir = 2
+
 [force_fields]
 force_field_1 = LenardJones
 force_field_1_R = 1
@@ -13,3 +12,8 @@ force_field_1_epsilon = 1
 
 force_field_2 = SoftWall
 force_field_2_size = 2
+
+[output]
+output_dir = 2
+spf = 10
+spe = 1
