--- a/conf/3.ini
+++ b/conf/3.ini
@@ -2,12 +2,16 @@
 dimension = 3
 number_of_atoms = 15
 steps = 20000
-spf = 10
 step_time = 0.001
 algorithm = LeapFrog
-output_dir = 3
+
 [force_fields]
 force_field_1 = LenardJones
 
 force_field_2 = SoftWall
 force_field_2_size = 3
+
+[output]
+output_dir = 3
+spf = 10
+spe = 1
