działa wszystko opróćz MBM

--- a/conf/testing.ini
+++ b/conf/testing.ini
@@ -1,16 +1,17 @@
 [main]
-dimension = 2
-number_of_atoms = 2
-steps = 100000
+dimension = 3
+number_of_atoms = 10
+;input_file = input/lenard.pdb
+steps = 10000
 step_time = 0.001
-;input_file = input/input.pdb
 algorithm = Verlet
 
 [force_fields]
-force_field_1 = LenardJones
-force_field_2 = SoftWall
-force_field_2_size = 2
-force_field_3 =
+force_field_1 = SoftWall
+force_field_1_size = 3
+;force_field_2 = SoftWall
+;force_field_2_size = 3
+;force_field_3 =
 
 [output]
 output_dir = 0
